	* Bugfix: All GARP algorithms were crashing when the abundance value associated with one of the occurrence points had more than two digits in the integer part.
	* Increased the default number of neurons in the hidden layer of the ANN algorithm.
	* New argument "s" in om_niche allowing model outputs to be scaled.

Release 1.0 (2009-05-22)
------------------------
SVN revision: 5035

	* Changed Artificial Neural Networks algorithm to avoid exceeding a maximum number of iterations when training by minimum error (parameter Epoch is used to specify the maximum number of iterations).
	* Added new method in the ConfusionMatrix class to use the lowest probability among the training presences as the threshold.
	* Changed the modelling protocol to allow createModel and testModel requests to specify what statistics should be calculated.
	* Removed model statistics parameters from om_model since they can be specified as part of the XML request.
	* All command line programs now return the same openModeller version number.
	* Changed om_niche parameters (now using getopts) and created a man page for it.
	* Implemented custom log file in the modelling server.
	* ROC curve was not including (0,0) when background points were being generated, therefore producing lower AUC values.
	* Added more precision to partial AUC through interpolation.
	* Disabled the experimental maximum entropy algorithm.

Release 0.7 (2009-01-14)
------------------------
SVN revision: 4761

	* New Algorithm using Artificial Neural Networks.
	* Changed AUC calculation when no absence points are provided (instead of using 1-specificity after generating pseudo-absences, it now uses the proportion of points predicted present for a large number of random background points).
	* Included method to calculate partial area ratio in ROC class.
	* Added parameters --calc-matrix, --calc-roc, --num-background and --max-omission to om_test.
	* Changed confusion matrix serialization to store all raw values.